[tool.poetry]
name = "runcached"
version = "0.1.0"
description = ""
authors = ["Tim Vergenz <vergenzt@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
appdirs = "*"
diskcache = "*"
pytimeparse = "*"
trycast = "*"
sh = "*"

[tool.poetry.dev-dependencies]
cogapp = "*"
pycln = "*"
pytest = "*"
syrupy = "*"
freezegun = "*"

[tool.poetry.scripts]
runcached = 'runcached.main:cli'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
