[tool.poetry]
name = "runcached"
version = "0.1.0"
description = ""
authors = ["Tim Vergenz <vergenzt@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
appdirs = "*"
diskcache = "*"
pytimeparse = "*"
trycast = "*"
shellous = "*"

[tool.poetry.dev-dependencies]
cogapp = "*"
pycln = "*"
pytest = "*"

[tool.poetry.scripts]
runcached = 'runcached.main:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
